# FastApi-course

./: .pre-commit-config.yaml  Dockerfile  FastApiCourse.pem  Makefile  Procfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Makefiles/: poetry.mk  pre-commit.mk
Makefiles/help/: MakeHelp.mk
app/: main.py  main_gradio.py  security--api_key.py
app/artifacts/: all_tags.csv  cv.pkl  mlb.pkl  model_supervise_proba.pkl  tfidf.pkl
app/suggestor/: preprocessors.py  suggestor.py
app/tests/: test_api.py
reports/pytests/: index.html
tests/: test_api.py
