[tool.poetry]
name = "fastapi-course"
version = "0.1.2"
description = ""
authors = ["Damien Chauvet <chauvet.damien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = "^0.31.1"
httpx = "^0.27.2"
slowapi = "^0.1.9"
pydantic = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
