[tool.poetry]
name = "fastapi-course"
version = "0.1.2"
description = ""
authors = ["Damien Chauvet <chauvet.damien@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = "^0.32.0"
slowapi = "^0.1.9"
pydantic = "^2.9.2"
joblib = "^1.4.2"
lxml = "^5.3.0"
cssselect = "^1.2.0"
spacy = "^3.8.2"

[tool.poetry.group.dev.dependencies]
bertopic = "^0.16.4"
gradio = "^5.6.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
pytest-html = "^4.1.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"
bandit = "^1.7.10"
ruff = "^0.7.4"
icecream = "^2.1.3"
tabulate = "^0.9.0"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", ".idea", "docs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
